--- a/stronka/main.html
+++ b/stronka/main.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Local Car Mechanic</title>
 </head>
 <body>
@@ -14,7 +16,7 @@
     </ul>
     <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">About Us</a></li>
+        <li><a href="javascript:void(0)" onclick="openOverlay('about-us-overlay')">About Us</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Testimonials</a></li>
         <li><a href="#">Gallery</a></li>
@@ -66,5 +68,6 @@
         <a href="#">Privacy Policy</a> • <a href="#">Terms of Service</a>
     </small>
 </footer>
+<script src="scripts.js"></script>
 </body>
 </html>
