--- a/wioska2/index2 copy.html
+++ b/wioska2/index2 copy.html
@@ -87,7 +87,6 @@
         <div id="npc-chat-history">
             <!-- NPC messages will be appended here -->
         </div>
-        <button id="play-tts">Play Response</button>
         <button id="continue-conversation">Continue Conversation</button>
     </div>
 
@@ -106,7 +105,7 @@
     </div>
 
     <!-- Audio player -->
-    <audio id="audio-player" controls style="display: none;">
+    <audio id="audio-player" controls style="display: none; width: 100%;">
         <source id="audio-source" src="" type="audio/wav">
         Your browser does not support the audio element.
     </audio>
